force-app/main/default/objects/Invoice_PDF__c/Invoice_PDF__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Invoice_PDF_Compact_Layout</compactLayoutAssignment>
    <label>Invoice PDF</label>
    <nameField>
        <label>Invoice PDF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice PDF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>