force-app/main/default/objects/Invoice_PDF__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice PDFs (Client)</relationshipLabel>
    <relationshipName>Invoice_PDFs1</relationshipName>
    <type>Lookup</type>
</CustomField>