force-app/main/default/objects/Invoice_PDF__c/fields/Invoice_Total2__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Total2__c</fullName>
    <formula>Sales_Invoice__r.c2g__InvoiceTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>