force-app/main/default/objects/Invoice_PDF__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <description>Opportunity Owner name.</description>
    <formula
  >Sales_Invoice__r.c2g__Opportunity__r.Owner.FirstName&amp;&quot; &quot;&amp;Sales_Invoice__r.c2g__Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>