force-app/main/default/objects/Invoice_PDF__c/fields/Primary_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Primary_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Invoice PDFs</relationshipLabel>
    <relationshipName>Invoice_PDFs</relationshipName>
    <type>Lookup</type>
</CustomField>