force-app/main/default/objects/Invoice_PDF__c/fields/Sales_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Sales_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipLabel>Invoice PDF</relationshipLabel>
    <relationshipName>Invoice_PDF</relationshipName>
    <type>Lookup</type>
</CustomField>