force-app/main/default/objects/Invoice_PDF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Client__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>PO__c</columns>
    <columns>Primary_Opportunity__c</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>